--- a/package.json
+++ b/package.json
@@ -21,11 +21,16 @@
     "eslint-config-next": "13.4.7",
     "next": "13.4.7",
     "next-images": "^1.8.5",
+    "orval": "^6.16.0",
     "pretendard": "^1.3.8",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-query": "^3.39.3",
     "recoil": "^0.7.7",
     "typescript": "5.1.6"
+  },
+  "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.61.0",
+    "@typescript-eslint/parser": "^5.61.0"
   }
 }
