--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "pretendard": "^1.3.8",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-pure-modal": "^2.2.4",
     "react-query": "^3.39.3",
     "recoil": "^0.7.7",
     "typescript": "5.1.6"
