--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@next/font": "13.4.7",
+    "@tosspayments/payment-sdk": "^1.6.3",
     "@types/node": "20.3.2",
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
@@ -25,7 +26,7 @@
     "pretendard": "^1.3.8",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-pure-modal": "^2.2.4",
+    "react-modal": "^3.16.1",
     "react-query": "^3.39.3",
     "recoil": "^0.7.7",
     "typescript": "5.1.6"
