--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-dom": "18.2.0",
     "react-modal": "^3.16.1",
     "react-query": "^3.39.3",
+    "react-toastify": "^9.1.3",
     "recoil": "^0.7.7",
     "typescript": "5.1.6"
   },
