--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/node": "20.3.2",
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
+    "@types/react-slick": "^0.23.10",
     "axios": "^1.4.0",
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.7",
@@ -29,8 +30,10 @@
     "react-dom": "18.2.0",
     "react-modal": "^3.16.1",
     "react-query": "^3.39.3",
+    "react-slick": "^0.29.0",
     "react-toastify": "^9.1.3",
     "recoil": "^0.7.7",
+    "slick-carousel": "^1.8.1",
     "typescript": "5.1.6"
   },
   "devDependencies": {
