--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@emotion/babel-plugin": "^11.11.0",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@netlify/plugin-nextjs": "^4.39.1",
     "@next/font": "13.4.7",
     "@tosspayments/payment-sdk": "^1.6.3",
     "@types/node": "20.3.2",
